ephctrl/ephctrl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ephctrl
  labels:
    app.kubernetes.io/name: "ephctrl"
    app.kubernetes.io/part-of: "ephemerator.tilt.dev"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "ephctrl"
      app.kubernetes.io/part-of: "ephemerator.tilt.dev"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "ephctrl"
        app.kubernetes.io/part-of: "ephemerator.tilt.dev"
    spec:
      serviceAccountName: ephctrl-service-account
      containers:
      - image: ephctrl
        name: ephctrl
        securityContext:
          allowPrivilegeEscalation: false
          
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 20Mi
            
      terminationGracePeriodSeconds: 10
