ephctrl/pod.yaml
# Credits:
# https://radu-matei.com/blog/kubernetes-e2e-kind-brigade/
# https://github.com/kubernetes-sigs/kind/issues/303
# for instructions on how to set up kind-in-kubernetes
apiVersion: v1
kind: Pod
metadata:
  name: kind
spec:
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
     - 1.1.1.1
     - 1.0.0.1
  containers:
    - name: kind
      image: cluster-bootstrapper
      securityContext:
        privileged: true
      volumeMounts:
        - mountPath: /lib/modules
          name: modules
          readOnly: true
        - mountPath: /sys/fs/cgroup
          name: cgroup
        - name: dind-storage
          mountPath: /var/lib/docker
  volumes:
  - name: modules
    hostPath:
      path: /lib/modules
      type: Directory
  - name: cgroup
    hostPath:
      path: /sys/fs/cgroup
      type: Directory
  - name: dind-storage
    emptyDir: {}
