ephctrl/ingress-no-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ephgateway
  labels:
    app.kubernetes.io/part-of: ephemerator.tilt.dev
    app.kubernetes.io/name: ephgateway
spec:
  ingressClassName: nginx
  rules:
  - host: preview.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ephdash
            port:
              number: 8080
