ephctrl/ingress-oauth2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ephgateway
  labels:
    app.kubernetes.io/part-of: ephemerator.tilt.dev
    app.kubernetes.io/name: ephgateway
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://preview.localhost/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://preview.localhost/oauth2/sign_in?rd=http://$host$escaped_request_uri"
spec:
  ingressClassName: nginx
  rules:
  - host: preview.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ephdash
            port:
              number: 8080
