ephctrl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ephgateway
  labels:
    app.kubernetes.io/part-of: ephemerator.tilt.dev
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: ephdash
      port:
        number: 8000
