ephctrl/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  labels:
    app.kubernetes.io/part-of: ephemerator.tilt.dev
    app.kubernetes.io/name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: ephemerator.tilt.dev
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: ephemerator.tilt.dev
        app.kubernetes.io/name: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=github
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --whitelist-domain=".preview.localhost"
        - --cookie-domain=".preview.localhost"
        - --pass-user-headers=false
        - --skip-provider-button
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  labels:
    app.kubernetes.io/part-of: ephemerator.tilt.dev
    app.kubernetes.io/name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    app.kubernetes.io/part-of: ephemerator.tilt.dev
    app.kubernetes.io/name: oauth2-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  labels:
    app.kubernetes.io/part-of: ephemerator.tilt.dev
    app.kubernetes.io/name: oauth2-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: preview.localhost
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
